# FenixEngine

./: .gitignore  .travis.yml  CMakeLists.txt  FenixEngine_STATIC.vcxproj  FenixEngine_STATIC.vcxproj.filters  FenixEngine_VS.vcxproj  FenixEngine_VS.vcxproj.filters  README.md
CMake/: Unix_Linux.cmake  WIN32.cmake
FenixEngine_SHARED/: FenixEngine_SHARED.cpp  FenixEngine_SHARED.vcxproj  FenixEngine_SHARED.vcxproj.filters
examples/: CMakeLists.txt  CMakeSettings.json
examples/example1/: example1.cpp
examples/example2/: example2.cpp
examples/example3/: example3.cpp
include/: FenixEngine.h.in  draggable_node.h  event_handler.h  exceptions.h  filled_rect.h  game_component.h  geometry.h  graphic.h  node.h  os.h  os.hpp  scene.h  sprite.h  text.h  viewport.h  window.h
include/events/: event_handler.h
include/graphics/: graphic.h  sprite.h  text.h
include/nodes/: draggable_node.h  node.h
scripts/: dependencies.sh
src/: exceptions.cpp  scene.cpp  viewport.cpp  window.cpp
src/events/: event_handler.cpp
src/graphics/: filled_rect.cpp  graphic.cpp  sprite.cpp  text.cpp
src/nodes/: draggable_node.cpp  node.cpp
src/physics/: geometry.cpp
