CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

SET(CMAKE_CXX_STANDARD 11)

IF (NOT PREFIX)
	SET(PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/../build")
ENDIF (NOT PREFIX)

INCLUDE_DIRECTORIES("${PREFIX}/include" "/usr/include" "/usr/local/include")
FIND_LIBRARY(FENIX_ENGINE FenixEngine PATHS "${PREFIX}/lib")

SET(EXAMPLES EXAMPLE1)
SET(EXAMPLE1_SOURCES "example1/example1.cpp")

FOREACH (EXAMPLE ${EXAMPLES})
	ADD_EXECUTABLE(${EXAMPLE} ${${EXAMPLE}_SOURCES})
	TARGET_LINK_LIBRARIES(${EXAMPLE} ${FENIX_ENGINE})
ENDFOREACH (EXAMPLE)
