CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
SET(PROJECT_NAME "Examples")

SET(CMAKE_CXX_STANDARD 11)

IF (NOT PREFIX)
	SET(PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/../build")
ENDIF (NOT PREFIX)

IF (NOT WIN32)
	INCLUDE_DIRECTORIES("${PREFIX}/include" "/usr/include" "/usr/local/include")
	SET(SYSTEM_LIBRARY_PATH "/lib" "/libexec" "/usr/lib" "/usr/libexec" "/usr/local/lib" "/usr/local/libexec" "${PREFIX}/lib")
ELSE (NOT WIN32)
	INCLUDE_DIRECTORIES("C:/devel/include")
	SET(SYSTEM_LIBRARY_PATH "C:/devel/lib/${ARCHITECTURE}" "C:/devel/lib/${CMAKE_BUILD_TYPE}/${ARCHITECTURE}" )
	FIND_FILE(SDL2_DLL "SDL2.dll" PATHS ${SYSTEM_LIBRARY_PATH})
	FIND_FILE(SDL2_IMAGE_DLL "SDL2_image.dll" PATHS ${SYSTEM_LIBRARY_PATH})
	FIND_FILE(SDL2_TTF_DLL "SDL2_ttf.dll" PATHS ${SYSTEM_LIBRARY_PATH})
	FIND_FILE(LIBJPEG9_DLL "libjpeg-9.dll" PATHS ${SYSTEM_LIBRARY_PATH})
	FIND_FILE(LIBPNG16_DLL "libpng16-16.dll" PATHS ${SYSTEM_LIBRARY_PATH})
	FIND_FILE(LIBTIFF_5_DLL "libtiff-5.dll" PATHS ${SYSTEM_LIBRARY_PATH})
	FIND_FILE(LIBFREETYPE_DLL "libfreetype-6.dll" PATHS ${SYSTEM_LIBRARY_PATH})
	FIND_FILE(ZLIB1_DLL "zlib1.dll" PATHS ${SYSTEM_LIBRARY_PATH})
	FIND_FILE(FENIXENGINE_DLL "FenixEngine.dll" PATHS ${SYSTEM_LIBRARY_PATH})

	SET(DLL_INSTALLED_LIBS 
		${SDL2_DLL}
		${SDL2_IMAGE_DLL}
		${SDL2_TTF_DLL}
		${LIBJPEG9_DLL}
		${LIBPNG16_DLL}
		${LIBTIFF_5_DLL}
		${LIBFREETYPE_DLL}
		${ZLIB1_DLL}
		${FENIXENGINE_DLL}
	)
ENDIF (NOT WIN32)

FIND_LIBRARY(FENIX_ENGINE FenixEngine PATHS ${SYSTEM_LIBRARY_PATH})
FIND_LIBRARY(SDL2_LIBRARY NAMES SDL2 PATHS ${SYSTEM_LIBRARY_PATH})
FIND_LIBRARY(SDL2_MAIN_LIBRARY  NAMES SDL2main PATHS ${SYSTEM_LIBRARY_PATH})
FIND_LIBRARY(SDL2_IMAGE_LIBRARY NAMES SDL2_image PATHS ${SYSTEM_LIBRARY_PATH})
FIND_LIBRARY(SDL2_TTF_LIBRARY NAMES SDL2_ttf PATHS ${SYSTEM_LIBRARY_PATH})

SET(LIBRARIES 
	${FENIX_ENGINE} 
	${SDL2_LIBRARY} 
	${SDL2_IMAGE_LIBRARY} 
	${SDL2_MAIN_LIBRARY}
	${SDL2_TTF_LIBRARY}
)

MESSAGE(STATUS "Libraries = ${LIBRARIES} | System library path: ${SYSTEM_LIBRARY_PATH}")

SET(EXAMPLES EXAMPLE1 EXAMPLE2 EXAMPLE3)
SET(EXAMPLE1_SOURCES "example1/example1.cpp")
SET(EXAMPLE2_SOURCES "example2/example2.cpp")
SET(EXAMPLE3_SOURCES "example3/example3.cpp")
SET(INSTALL_DIR "${CMAKE_CURRENT_SOURCE_DIR}/bin")

FOREACH (EXAMPLE ${EXAMPLES})
	ADD_EXECUTABLE(${EXAMPLE} ${${EXAMPLE}_SOURCES})
	TARGET_LINK_LIBRARIES(${EXAMPLE} ${LIBRARIES})
	IF (WIN32)
		INSTALL(FILES "${LIBRARIES}" DESTINATION $<TARGET_FILE_DIR:${EXAMPLE}>)
	ENDIF(WIN32)
	
	INSTALL(TARGETS ${EXAMPLE} DESTINATION ${INSTALL_DIR})
	

ENDFOREACH (EXAMPLE)

ADD_CUSTOM_TARGET(${PROJECT_NAME} DEPENDS ${EXAMPLES})
INSTALL(FILES ${DLL_INSTALLED_LIBS} DESTINATION ${INSTALL_DIR})
INSTALL(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/resources" DESTINATION ${INSTALL_DIR})
